<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="repetitions"
            type="Integer" />
        <variable
            name="timerViewModel"
            type="com.toms.applications.countdownlooper.screens.timer.TimerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".screens.timer.TimerFragment">

        <TextView
            android:id="@+id/starts_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/repetition_starts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primary_medium"
            app:layout_constraintBottom_toTopOf="@+id/timer_in_between_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/repetition_starts" />

        <TextView
            android:id="@+id/timer_in_between_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/orbitron_medium_xml"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primary_medium"
            app:layout_constraintBottom_toTopOf="@+id/timer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMiniBtnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_btn_start"
            android:onClick="@{() -> timerViewModel.pauseBetweenTimer()}"
            android:src="@drawable/ic_pause_24"
            android:tint="@color/primary_medium"
            android:visibility="visible"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/timer_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_in_between_text"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/orbitron_medium_xml"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00:00" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBtnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_btn_start"
            android:src="@drawable/ic_pause_24"
            android:tint="@color/primary_medium"
            android:visibility="gone"
            android:onClick="@{() -> timerViewModel.pauseMyTimer()}"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/repetitions_remaining"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_text"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/repetitions_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@{repetitions != 0 ? @string/repetition_remaining(repetitions) : @string/last_repetition_text}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primary_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/repetition_remaining" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>